<resources>
    <string name="app_name">InterfazAerolinea</string>
    <string name="contentDescriptionIVDragonAirlinesLogo">Logotipo Dragon Airlines</string>
    <string name="tvOrigen">Origen:</string>
    <string name="tvDestino">Destino:</string>
    <string name="tvTratamiento">Tratamiento:</string>
    <string name="tvNombre">*Nombre:</string>
    <string name="tvName">Name</string>
    <string name="hintETNombre">Introduzca su nombre</string>
    <string name="tvApellidos">*Apellidos:</string>
    <string name="hintETApellidos">Introduzca sus apellidos</string>
    <string name="tvDireccion">*Dirección:</string>
    <string name="hintETDireccion">Introduzca su dirección</string>
    <string name="tvTelefono">*Teléfono:</string>
    <string name="hintETTelefono">Introduzca su teléfono</string>
    <string name="tvEmail">*Email:</string>
    <string name="hintETEmail">Introduzca su email</string>
    <string name="rbTratSr">Sr.</string>
    <string name="rbTratSra">Sra.</string>
    <string name="rbTratSrta">Srta.</string>
    <string name="tvMovilidad">Movilidad reducida:</string>
    <string name="swMovilidad">¿Movilidad reducida?</string>
    <string name="tvDatos"><u>Datos Personales</u></string>
    <string name="tvExtras"><u>Extras</u></string>
    <string name="cbExtra1">Viajar en primera clase (+50€)</string>
    <string name="cbExtra2">Asiento con ventanilla (+20€)</string>
    <string name="cbExtra3">Viajar con una mascota (Gratuito)</string>
    <string name="cbExtra4">Bloquear asientos contiguos (+30€)</string>
    <string name="tvSeguro"><u>Seguro adicional</u></string>
    <string name="swSeguro">¿Desea contratar el seguro adicional antiGodzilla? (+60€)</string>
    <string name="tvDescSeguro">Las posibilidades de que Godzilla realice un ataque durante su vuelo son del 65%, le ofrecemos la posibilidad de contratar este seguro para indemnizarle cualquier daño que pueda sufrir.</string>
    <string name="cbTerminos">He leído y acepto los <a href="">términos y condiciones</a> del uso de datos y seguridad.</string>
    <string name="ibPremium">ImageButton Premium</string>
    <string name="tvPremium">¿Desea contratar la opción Acceso preferente?
        ¡Haga click en el botón de abajo y viaje en la senda del Pixiu!</string>
    <string name="tvPremiumInfo">Obtener información sobre la opción <a href="">Acceso preferente</a></string>
    <string name="btComprar">Comprar billete</string>
    <!-- Strings Menu -->
    <string name="miCuenta">Mi cuenta</string>
    <string name="datosPersonales">Datos personales</string>
    <string name="docuViaje">Mis documentos de viaje</string>
    <string name="compañerosViaje">Mis compañeros de viaje</string>
    <string name="misViajes">Mis viajes</string>
    <string name="tarjetasEmbarque">Tarjeta de embarque</string>
    <string name="infoVuelo">Información sobre el vuelo</string>
    <string name="valesRegalo">Vales de regalo</string>
    <string name="revistaVuelo">Revista de vuelo</string>
    <string name="terminosCondiciones">Términos y condiciones</string>
    <string name="centroDeAyuda">Centro de ayuda</string>
    <string name="contactarAerolinea">Contactar con la aerolínea</string>
    <string name="politicaPrivacidad">Política de privacidad</string>
    <string name="configPrivacidad">Configuración de privacidad</string>
    <string name="tvTitleCompra">Confirmación de compra</string>
    <string name="tvDescCompra">¿Desea realizar la compra de este billete?</string>
    <string name="btDenegar">Button</string>
    <string name="btConfirmar">Button</string>
    <string name="conDesIBCancelar">image button cancelar</string>
    <string name="conDesIBConfimar">image button confirmar</string>
    <string name="tvFecha">Fecha:</string>
    <string name="tvPrecioTitulo">El precio de su billete es:</string>
    <string name="btFinalizar">Finalizar compra</string>
    <string name="tvFactura"><u>Factura</u></string>
    <string name="btAceptar">Aceptar</string>
    <string name="ivDragonAirlinesLogoBill">ivDragonAirlinesLogoBill</string>
    <string name="tvDatosPersonalesTitulo">¿Aún no tienes tu cuenta \n de Dragon Airlines?</string>
    <string name="btCrearCuenta">Crear cuenta</string>
    <string name="tvDatosPesonales">¡Pulsa en el botón de abajo y descubre todas las sorpresas que tenemos preparadas para ti!</string>
    <string name="tvGuiaBangkok">Consigue tu guía turística de Bangkok</string>
    <string name="tvGuiaCiudadHoChiMinh">Consigue tu guía turística de Ciudad Ho Chi Minh</string>
    <string name="tvGuiaSeul">Consigue tu guía turística de Seúl</string>
    <string name="tvGuiaShanghai">Consigue tu guía turística de Shanghái</string>
    <string name="tvGuiaTokio">Consigue tu guía turística de Tokio</string>
    <string name="tvGuiaYakarta">Consigue tu guía turística de Yakarta</string>
    <string name="tvGuiaTitulo">Aquí tienes todas las guías necesarias para tus viajes con Dragon Airlines</string>
    <string name="tvCompañerosViajeTitulo"><u>Estos son tus compañeros de viaje</u></string>
    <string name="tvCompañeroManolo">· Manolo Manolín (Asiento B16)</string>
    <string name="tvCompañeroJuan">· Juan Juanete (Asiento H44)</string>
    <string name="tvCompañeroPablo">· Pablo Pablete (Asiento E31)</string>
    <string name="tvTarjetaEmbarqueTitle"><u>Tarjeta de embarque</u></string>
    <string name="tvTarjetaEmbarque">No tienes ningún viaje programado</string>
    <string name="tvMisViajesTitle"><u>Mis viajes</u></string>
    <string name="tvMisViajes">Aún no has viajado con nosotros, ¿a qué esperas?</string>
    <string name="tvInfoVueloTitulo"><u>Información sobre el vuelo</u></string>
    <string name="tvInfoVuelo">No tienes ningún viaje programado</string>
    <string name="tvValesRegaloTitulo"><u>Vales de regalo</u></string>
    <string name="tvValeDesayuno">· Vale por un desayuno gratis <i>(Canjeado)</i></string>
    <string name="tvValeClaseTaichi">· Vale por una clase de Taichí</string>
    <string name="tvValePaseoBarca">· Vale por un paseo en barca</string>
    <string name="tvRevistaVueloTitle"><u>Revista de vuelo</u></string>
    <string name="tvRevistaVuelo">No tienes ningún viaje programado</string>
    <string name="tvTerminosYCondicionesTitle"><u>Terminos y condiciones</u></string>
    <string name="tvTerminosYCondiciones">Obtén todos nuestros términos y condiciones pulsando en el botón de abajo.</string>
    <string name="btTerminosYCondiciones">Continuar</string>
    <string name="tvCentroDeAyudaTitle"><u>Centro de ayuda</u></string>
    <string name="tvCentroDeAyuda">Para contactar con nuestro centro de ayuda pulsa en el botón de abajo.</string>
    <string name="btCentroDeAyuda">Continuar</string>
    <string name="tvContactarAerolineaTitulo"><u>Contactar con la aerolínea</u></string>
    <string name="tvContactoEmail">Nuestro email: <b>consultasclientes@dragonairlines.com</b></string>
    <string name="tvContactoTlf">Nuestro número de teléfono gratuito: <b>914 05 71 49</b></string>
    <string name="tvContactoRRSS">Nuestras redes sociales:</string>
    <string name="tvContactoRRSSInsta">\t\t\t· Instagram: <b>@dragonairlines</b></string>
    <string name="tvContactoRRSSTwitter">\t\t\t· Twitter: <b>@DragonAirlinesOficial</b></string>
    <string name="tvContactoRRSSFacebook">\t\t\t· Facebook: <b>@dragonairlines_sa</b></string>
    <string name="tvPoliticaPrivacidadTitle"><u>Política de privacidad</u></string>
    <string name="tvPoliticaPrivacidad">Para conocer nuestra política de privacidad pulsa en el botón de abajo.</string>
    <string name="btPoliticaPrivacidad">Continuar</string>
    <string name="tvConfigPrivacidadTitulo"><u>Configuración de privacidad</u></string>
    <string name="tvUsoDatos">Permito el uso de mis datos para la realización de estudios de mercado</string>
    <string name="tvPelicula">Acepto ceder mi imagen para realizar una película si se diera el caso</string>
    <string name="tvCamiseta">Acepto comercializar una camiseta en la que se incluya mi nombre junto al del resto de los pasajeros como símbolo de recuerdo del viaje</string>
    <string name="btConfigPrivacidadAceptar">Aceptar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>