<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".menu.DocuViajesActivity">

    <TextView
        android:id="@+id/tvGuiaTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:text="@string/tvGuiaTitulo"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvGuiaBangkok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tvGuiaBangkok"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGuiaCiudadHoChiMinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tvGuiaCiudadHoChiMinh"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGuiaSeul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tvGuiaSeul"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGuiaShanghai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tvGuiaShanghai"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGuiaTokio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tvGuiaTokio"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGuiaYakarta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tvGuiaYakarta"
        android:textSize="20sp" />

</LinearLayout>