<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".menu.ContactarAerolineaActivity">

    <TextView
        android:id="@+id/tvConfigPrivacidadTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:text="@string/tvContactarAerolineaTitulo"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContactoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvContactoEmail"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfigPrivacidadTitulo" />

    <TextView
        android:id="@+id/tvContactoTlf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvContactoTlf"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactoEmail" />

    <TextView
        android:id="@+id/tvContactoRRSS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvContactoRRSS"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactoTlf" />

    <TextView
        android:id="@+id/tvContactoRRSSInsta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvContactoRRSSInsta"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactoRRSS" />

    <TextView
        android:id="@+id/tvContactoRRSSTwitter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvContactoRRSSTwitter"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactoRRSSInsta" />

    <TextView
        android:id="@+id/tvContactoRRSSFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvContactoRRSSFacebook"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactoRRSSTwitter" />

</androidx.constraintlayout.widget.ConstraintLayout>