<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvTitleCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tvTitleCompra"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDescCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tvDescCompra"
        android:textColor="#616161"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="144dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibCancelar"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="300dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/conDesIBCancelar"
            android:scaleType="fitCenter"
            android:src="@drawable/cross"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/ibConfirmar"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="300dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/conDesIBConfimar"
            android:scaleType="fitCenter"
            android:src="@drawable/check"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />
    </LinearLayout>

</LinearLayout>