<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.ConfigPrivacidadActivity">

    <TextView
        android:id="@+id/tvConfigPrivacidadTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:text="@string/tvConfigPrivacidadTitulo"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbUsoDatos"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUsoDatos"
        app:layout_constraintTop_toBottomOf="@+id/tvConfigPrivacidadTitulo"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvUsoDatos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvUsoDatos"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cbUsoDatos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfigPrivacidadTitulo" />

    <CheckBox
        android:id="@+id/cbPelicula"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbUsoDatos" />

    <TextView
        android:id="@+id/tvPelicula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvPelicula"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cbPelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsoDatos" />

    <CheckBox
        android:id="@+id/cbCamiseta"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="84dp"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPelicula" />

    <TextView
        android:id="@+id/tvCamiseta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/im_fell_dw_pica"
        android:padding="20dp"
        android:text="@string/tvCamiseta"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cbCamiseta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPelicula" />

    <Button
        android:id="@+id/btConfigPrivacidadAceptar"
        android:layout_width="179dp"
        android:layout_height="62dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btConfigPrivacidadAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCamiseta" />

</androidx.constraintlayout.widget.ConstraintLayout>