<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".mainActivities.BillActivity">

    <ImageView
        android:id="@+id/ivDragonAirlinesLogoBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/ivDragonAirlinesLogoBill"
        android:src="@drawable/dragonairlines" />

    <TextView
        android:id="@+id/tvFacturaTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/im_fell_dw_pica"
        android:gravity="center"
        android:text="@string/tvFactura"
        android:textColor="#000000"
        android:textSize="34sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFactura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvPrecioBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btAceptar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>